Mon Feb 25 20:29:36 UTC 2008  Brian Johnson  <johnsonb@stladvantage.com>

        * bin/dcps_tests.lst:

          Added restrictions to not run ImR test on CORBA_E_COMPACT and CORBA_E_MICRO.

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Added dependency on imr_client.

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Added #include line for STATIC include of imr_client.

        * examples/DCPS/Messenger_Imr/Messenger_Imr.mpc:
        * examples/DCPS/Messenger_Imr/publisher.cpp:
        * examples/DCPS/Messenger_Imr/run_test.pl:
        * examples/DCPS/Messenger_Imr/subscriber.cpp:

          Changes to be able to run a static build.

Fri Feb 22 19:45:32 UTC 2008  Brian Johnson  <johnsonb@stladvantage.com>

        * bin/dcps_tests.lst:

          Removed static limitation on Imr test.

Fri Feb 22 15:36:05 UTC 2008  Brian Johnson  <johnsonb@stladvantage.com>

        * bin/dcps_tests.lst:

          Changed test to only run for certain builds.

Wed Feb 20 22:50:41 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>

        * bin/dcps_tests.lst:

          Added Messenger_Imr test to nightly builds.

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Changed _narrow of info repo object to an _unchecked_narrow
          since in the case where we are using an Imr, the call goes
          to the Imr and back to us, which is wasteful and was currently
          causing an exception since the POAManager wasn't yet activated.

        * examples/DCPS/Messenger_Imr/run_test.pl:

          Made a change to the location that the tcp.conf file is
          expected at.  Also added passing in the conf file to the
          Info repo.

Mon Feb 18 16:28:55 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/ZeroCopyAllocator_T.cpp:
          Eliminated a warning from gcc in asserts.

Mon Feb 18 14:41:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Util.h:
          Added a typedef to compile the code with BCB and GCC.
